fix: trim whitespace from item editor description field.

--- a/public/main.scss
+++ b/public/main.scss
@@ -18,3 +18,7 @@
   --bs-list-group-item-padding-y: 0.25rem;
   font-size: 0.85rem;
 }
+
+.remove-whitespace{
+  white-space: pre-wrap;
+}
